--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <section>
+    <section class="top-banner">
         <div class="half-width" >
             <h1>Welcome To </h1>
             <h1><span class="name-highlight" >Kowser</span> Website</h1>
             <h3>World-class professional Web Dev</h3>
             <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
+            <a class="link-button" target="_" href="https://www.facebook.com/">HIRE ME</a>
         </div>
         <div class="half-width" >
             <img src="./img/jhankar.png" alt="jhankar">
