--- a/index.html
+++ b/index.html
@@ -21,5 +21,16 @@
             <img src="./img/jhankar.png" alt="jhankar">
         </div>
     </section>
+    <section class="dream-area">
+        <div class="half-width">
+            <img src="./img/jhankar2.png" alt="Jhanker2">
+        </div>
+        <div class="half-width">
+            <h2>Big Dream</h2>
+            <h3>Become World's No. 1 Developer</h3>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <a class="link-button" href="#">DOWNLOAD RESUME</a>
+        </div>
+    </section>
 </body>
 </html>
